tests/macro-tests/tests/expand/fail/second.expanded.rs
error: expected identifier, found `{`
tests/expand/fail/second.rs:1:5
  |
1 | mod {
  |     ^ expected identifier
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error